# digital_slide_archive

./: .gitignore  CLAUDE.md
devops/dsa/: README.rst  deploy.sh  direct_docker_run.py  docker-compose.yml  microsoft_oauth_provider.py  provision.py  provision.yaml
devops/dsa/dicom_import_plugin/: MANIFEST.in  setup.cfg
devops/dsa/dicom_import_plugin/girder_dicom_import/: __init__.py  import_logic.py
devops/dsa/dicom_import_plugin/girder_dicom_import/web_client/: main.js  package.json
devops/dsa/trident_cleanup_plugin/: setup.cfg
devops/dsa/trident_cleanup_plugin/girder_trident_cleanup/: __init__.py
devops/dsa/utils/: backfill_dicom_meta.py  import_dicomweb_series.py
