[metadata]
name = girder-dicom-import
version = 0.1.1
description = Import DICOMweb series into DSA from the web UI

[options]
packages = find:
include_package_data = True
install_requires =
    girder>=3
    girder-jobs

[options.entry_points]
girder.plugin =
    dicom_import = girder_dicom_import:DICOMImportPlugin
