[metadata]
name = girder-trident-cleanup
version = 0.1.0
description = Cascade-delete on-disk TRIDENT job directories when their Girder folder is removed

[options]
packages = find:
include_package_data = True
install_requires =
    girder>=3

[options.entry_points]
girder.plugin =
    trident_cleanup = girder_trident_cleanup:TridentCleanupPlugin
